# obsidian2epub

./: Cargo.toml  README.md
src/: indexer.rs  main.rs  metadata.rs  packager.rs  transformer.rs
tests/: integration.rs
